# copilot-agents

./: .gitignore  README.md  pyproject.toml
.github/agents/: implementation.agent.md  planner.agent.md  release-notes.agent.md  researcher.agent.md  reviewer.agent.md
.github/hooks/: agent-hooks.json
.github/workflows/: ci.yml  release.yml
docs/: agents.md  capabilities.md  hooks.md  tools.md  workflows.md
invaders/: __init__.py  __main__.py  config.py  core.py
invaders/entities/: __init__.py  bullet.py  enemy.py  player.py
invaders/systems/: __init__.py  collision.py
invaders/ui/: __init__.py  hud.py
scripts/: package.sh
scripts/hooks/: README.md  post_tool_log.py  pre_tool_guard.py  session_context.py  session_summary.py
tests/: test_collision.py
