[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "space-invaders-py"
version = "0.1.0"
description = "Minimal Space Invaders clone in Python (pygame)"
authors = [ { name = "You" } ]
requires-python = ">=3.10"

dependencies = [
	"pygame>=2.1",
]

[project.optional-dependencies]
dev = [
	"pytest>=7.0",
	"pyinstaller>=5.0",
]

[project.scripts]
invaders = "invaders.__main__:main"

[tool.setuptools.packages.find]
where = [""]
